finished the autorization form

--- a/homework3.html
+++ b/homework3.html
@@ -91,7 +91,7 @@
                     <p style="font-size:9px;">WHAT'S NEW</p>
                     <p style="font-size: 25px;">Pay conveniently with credit card</p>
                     <p style="font-size:9px;">1 of 10 </p>
-                    <p style="font-size:9px;"># better every day</div>
+                    <p style="font-size:9px;"># better every day</p></div>
         </div>
     <div class="item3">
         <div clas="item">youami</div>
