--- a/credit-card.html
+++ b/credit-card.html
@@ -14,6 +14,7 @@
     .credit-card {
       display: flex;
       width: 100%;
+      z-index: 1;
     }
     .credit1,
     .credit2,
@@ -108,9 +109,6 @@
     #cub-round {
         color: red;
         background: grb(255, 213, 205);
-
-
-
     }
 
   </style>
