--- a/authorization.html
+++ b/authorization.html
@@ -11,6 +11,8 @@
       body,
       .wrapper {
         height: 100%;
+        margin: 0;
+        padding: 0;
       }
 
       body {
@@ -44,6 +46,7 @@
       .banner {
         flex: 1;
         flex-direction: column;
+        
       }
       .input {
         border: none;
@@ -77,11 +80,13 @@
         width: 100%;
         height: 100%;
         line-height: 0;
-        border: none;
+        
+
       }
       .picture {
-        object-fit: contain;
+        object-fit: cover;
         width: 100%;
+        height: 100%;
         padding: 0;
         margin: 0;
         border: none;
