--- a/Homework4.html
+++ b/Homework4.html
@@ -143,6 +143,7 @@
     .center {
       margin-left: 350px;
       padding-inline-start: 30px, 30px, 0, 0;
+      width: 100%;
     }
 
     .searchline {
@@ -151,15 +152,14 @@
       background: rgb(246, 247, 255);
       width: 100%;
       display: flex;
-      flex-direction: row;
       height: 290px;
-      box-sizing: border-box;
+      justify-content: space-between;
       border-bottom: solid;
       border-color: rgb(233, 231, 243);
+      text-align: center;
     }
     .search {
       position: flex;
-      flex-direction: row;
       width: 300px;
       background: white;
       padding-left: 15px;
@@ -186,22 +186,19 @@
     .extra-icons {
       color: rgb(71, 71, 75);
       width: 100px;
-      height: 35px;
       display: flex;
       font-size: 35px;
-      margin-left: 100px;
-      margin-right: 100px;
-      align-items: center;
+      text-align: center;
     }
 
     .extra-menu {
       word-spacing: 15px;
-      margin-right: 150px;
-      margin-left: 150px;
+      align-items: center;
+      text-align: center;
       padding-top: 10px;
       color: rgb(165, 166, 179);
       width: 150px;
-      height: 35px;
+      
     }
 
     #avatar1 {
@@ -212,7 +209,6 @@
     .avatar {
       font-weight: bolder;
       display: flex;
-      justify-content: end;
       color: rgb(49, 48, 50);
       width: 180px;
       height: 50px;
@@ -236,7 +232,7 @@
 
   </style>
   <body>
-    <main class="sidebar">
+    <asaid class="sidebar">
       <img src="Logo.png" alt="" />
       <h3>Main navigation</h3>
 
@@ -355,7 +351,7 @@
           <button class="button">Go To Help Center</button>
         </div>
       </figure>
-    </main>
+    </asaid>
 
     <div class="center">
       <div class="searchline">
