--- a/Homework4.html
+++ b/Homework4.html
@@ -150,6 +150,7 @@
 
     .center {
       margin-left: 250px;
+      width: 75%;
     }
 
     .searchline {
@@ -165,6 +166,7 @@
       border-color: rgb(233, 231, 243);
       text-align: center;
       position: fixed;
+      width: 75%;
     }
     .search {
       position: flex;
