--- a/Homework4.html
+++ b/Homework4.html
@@ -147,7 +147,14 @@
       width: 90%;
       border: none;
       margin-top: 20px;
+     
     }
+    
+    #link-buttom{
+      text-decoration: none;
+      color: rgb(90, 83, 70);
+    }      
+  
 
     main {
       margin-left: 250px;
@@ -547,8 +554,6 @@
         margin-left: 25px;
     }
 
-   
-
     .main-inform {
       display: flex;
       justify-content: space-between;
@@ -791,7 +796,7 @@
             </p>
           </div>
 
-          <button class="button">Go To Help Center</button>
+          <button class="button"><a href="https://search.google.com/search-console/about" id="link-buttom">Go To Help Center</a></button>
         </div>
       </div>
     </aside>
@@ -1079,7 +1084,7 @@
                                 </nav>
                             </nav>
                                 <nav class="colum-2">
-                                  <nav class="line2">Income:Salary Oct
+                                  <nav class="line2">Income: Salary Oct
                                   </nav>
                                   <nav class="view">Successfully</nav>
                                 </nav>
