--- a/authorization.html
+++ b/authorization.html
@@ -57,7 +57,7 @@
 
       .button {
         font-size: 16px;
-        background: #d459ed;
+        background: #d65eee;
         color: white;
         border: none;
         padding: 10px 20px;
