--- a/grids.html
+++ b/grids.html
@@ -27,7 +27,7 @@
         grid-template-columns: 200px auto 200px;
         grid-template-rows: 100px auto 50px;
         grid-template-areas: 
-        "header header heder"
+        "header header header"
         "aside main banner"
         "footer footer footer"
         ;
