--- a/gridslayout.html
+++ b/gridslayout.html
@@ -8,7 +8,10 @@
 </head>
 <style>
 
-   
+   body,
+   html {
+    height: 100%;
+   }
 
    .wrapper {
         display: grid;
@@ -20,7 +23,7 @@
         "aside center-top1 center-top2 right-banner"
         "aside enter-button1 enter-button2 right-banner";
         background: rgb(44, 46, 86);
-        height: 500px;
+        height: 100%;
         padding: 50px;
         
     }
