--- a/gridslayout.html
+++ b/gridslayout.html
@@ -10,20 +10,22 @@
 
    body,
    html {
-    height: 100%;
+   height:  100%;
+
    }
+   
 
    .wrapper {
         display: grid;
-        grid-template-columns: repeat(4, 300px);
-        grid-template-rows: repeat(3, 150px);
+        grid-template-columns: repeat(3, 150px);
+        grid-template-rows: repeat(4, 150px);
         gap: 10px;
         grid-template-areas: 
         "aside header1 header1 rightside"
         "aside center-top1 center-top2 right-banner"
-        "aside enter-button1 enter-button2 right-banner";
+        "aside enter-button1 enter-button2 right-banner"
+        "enter-button1 enter-button1 right-banner";
         background: rgb(44, 46, 86);
-        height: 100%;
         padding: 50px;
         
     }
