--- a/lesson1910.html
+++ b/lesson1910.html
@@ -8,40 +8,58 @@
 </head>
 <style>
 
-  
+  body,
+  html {
+    height: 100%;
+  }
    
 
    .wrapper {
-        display: grid;
-        grid-template-columns: repeat(3, 150px);
-        grid-template-rows: repeat(4, 150px);
+    display: grid;
+        grid-template-columns: repeat(3, 100%);
+        grid-template-rows: repeat(4, 100%);
+        gap: 10px;
+        grid-template-areas: 
+        "aside header1 header1 rightside"
+        "aside center-top1 center-top2 right-banner"
+        "aside enter-button1 enter-button2 right-banner"
+        "enter-button1 enter-button1 right-banner";
+        padding: 50px;
         }
    
         
      .aside {
             grid-area: aside;
+            background: green;
         }
         .header1 {
             grid-area: header1;
+            background: green;
         }
         .rightside {
             grid-area: rightside;
+            background: green;
         }
         .center-top1 {
             grid-area: center-top1;
+            background: green;
             
         }
         .center-top2 {
-           grid-area: center-top1
+           grid-area: center-top1;
+           background: green;
         }
         .right-banner {
             grid-area: right-banner;
+            background: green;
         }
         .enter-button1 {
             grid-area: enter-button1;
+            background: green;
         }
         .enter-button2 {
             grid-area: enter-button2;
+            background: green;
         }
 
    
