--- a/lesson2410.html
+++ b/lesson2410.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <script>
-      const temp = promt("Please input temperature:");
+      const temp = prompt("Please input temperature:");
       if (temp == 20) {
         alert("Normal");
       } else if (temp > 20) {
