--- a/lesson2610.html
+++ b/lesson2610.html
@@ -18,6 +18,7 @@
     body {
         margin: 0;
         padding: 0;
+        height: 100%;
 
     }
     :root {
@@ -92,7 +93,7 @@
         padding: 20px;
     }
     .information {
-        width: 50%;
+        width: 20%;
         border: 2px solid red;
         margin: 5px;
     }
@@ -151,7 +152,21 @@
       </div>
       <div class="content">
         <div class="wrapper-content">
-        <div class="information">2</div>
+        <div class="information">
+            <h1> Refueling a car at your addres</h1>
+            <h4>Delivery service for all typs of fuel for your car</h4>
+            <div class="wrapper-buttom">
+            <button class="button" onclick="toggleMenu()">Apple store</button>
+            <button class="button" onclick="toggleMenu()">Google play</button>
+            </div>
+            <div class="wrapper-buttom">
+                <button class="button" onclick="toggleMenu()">Instagram</button>
+                <button class="button" onclick="toggleMenu()">Facebook</button>
+                <button class="button" onclick="toggleMenu()">Twitter</button>
+
+                </div>
+        </div>
+        </div>
         <div class="image">3</div>
         </div>
       </div>
