--- a/lesson2610.html
+++ b/lesson2610.html
@@ -37,7 +37,7 @@
     .wrapper {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1/2fr 1/4fr 1/4fr);
       gap: 10px;
       grid-template-areas: 
       "header header header"
